# smartwatch-licenta

./: .gitignore  .gitmodules  README.md  platformio.ini
CAD/: 112A-TAAR-R03--3DModel-STEP-56544.STEP  BMI085--3DModel-STEP-56544.STEP  DMG2305UX-7.STEP  XC8107AC20MR-G.STEP
CAD/3d-files/: Bot layer.step  Button.step  Mid layer.step  Top Layer.step  battery_holder.stl  bottom_layer.stl  buttons.stl  interposer.stl  top_layer.stl
CAD/components/: MCP73831T-2ACI_OT.STEP  PESD5V0S1BL,315.STEP  VC181238U770DP.STEP
CAD/smartwatch/: SmartCeas v2.f3d
board/: IMG_1947.heic  IMG_1947.heic:Zone.Identifier  espressif-kicad-addon.zip:Zone.Identifier  fp-info-cache  licenta.kicad_sym
board/Kicad-Libraries-master/: README.md:Zone.Identifier
board/licenta/: licenta.kicad_dru  licenta.kicad_pcb  licenta.kicad_prl  licenta.kicad_pro  (+3 more)
code/: README.md
src/: README.md  custom_partitions.csv  lv_conf.h  platformio.ini  sdkconfig.lolin_s3_mini
src/src/: CMakeLists.txt  bmi.cpp  bmi.h  core.h  display.cpp  display.h  main.cpp  ppg.cpp  ppg.h  test_bmi.cpp  test_display.cpp  test_ppg.cpp  test_sd.cpp
src/src/apps/: app.h  gui.cpp  pedometer.cpp  settings.cpp  settings.h  settings_app.cpp  watchface.cpp  watchface.h
src/src/components/: battery.cpp  bmi.cpp  bmi.h  boardsettings.cpp  boardsettings.h  deviceManager.cpp  deviceManager.h  display.cpp  display.h  drv.cpp  drv.h  norFlash.cpp  ppg.cpp  sd.cpp  sd.h
src/src/configs/: configs.h
src/src/resources/fonts/: custom_symbols_14px.c  digital_7_24px.c  digital_7_72px.c  symbols.h
src/src/resources/images/: moon.c
(+69 files in other folders)
